# windows-rectangle

./: .gitignore  Cargo.toml  README.md  TESTING.md  app.rc  build.rs
.github/workflows/: release.yml
docs/plans/: 2026-05-05-window-rectangle-design.md  2026-05-05-window-rectangle-implementation.md  2026-05-05-windows-rectangle-design.md  2026-05-05-windows-rectangle-implementation.md
landing/: index.html
src/: adjacency.rs  bindings.rs  cycle_state.rs  geometry.rs  lib.rs  main.rs
src/win/: dispatcher.rs  foreground.rs  hotkey.rs  mod.rs  monitor.rs  tray.rs  window_ops.rs
