[package]
name = "window-rectangle"
version = "0.1.0"
edition = "2021"
description = "Windows tray app to resize active window via hotkeys"

[lib]
name = "window_rectangle"
path = "src/lib.rs"

[[bin]]
name = "window-rectangle"
path = "src/main.rs"

[dependencies]
anyhow = "1"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_UI_Input_KeyboardAndMouse",
    "Win32_Graphics_Gdi",
    "Win32_UI_Accessibility",
    "Win32_System_LibraryLoader",
] }
tray-icon = "0.19"
winit = "0.30"

[target.'cfg(target_os = "windows")'.build-dependencies]
embed-resource = "2"

[profile.release]
opt-level = "z"
lto = true
strip = true
